// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wikiLinks compile "HTML: WITH_ALIAS" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo.html\\">bar</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo.html#one\\">Foo</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: WITH_EXTENSION" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo.html\\">Foo</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: WITH_ID_AS_LINK" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo-id.html\\">Foo</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"foo-id.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo-2.html\\">Foo</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: WITH_XVAULT_LINK_TO_SAME_VAULT" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo.html\\">Foo</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo.html\\">bar</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "HTML: regular" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a href=\\"foo.html\\">Foo</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a href=\\"bar.html\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_ALIAS" 1`] = `
VFile {
  "contents": "[[bar|foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "[[foo#one]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_EXTENSION" 1`] = `
VFile {
  "contents": "[[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_ID_AS_LINK" 1`] = `
VFile {
  "contents": "[[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_SPACE_AND_ALIAS" 1`] = `
VFile {
  "contents": "[[bar|foo bar]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "[[dendron://vault2/foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_XVAULT_LINK_TO_SAME_VAULT" 1`] = `
VFile {
  "contents": "[[dendron://vault1/foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS" 1`] = `
VFile {
  "contents": "[[bar|dendron://vault1/foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_DENDRON: regular" 1`] = `
VFile {
  "contents": "[[foo]]

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_ALIAS" 1`] = `
VFile {
  "contents": "# Root

[bar](foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_EXTENSION" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_SPACE_AND_ALIAS" 1`] = `
VFile {
  "contents": "# Root

[bar](foo%20bar.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "# Root

[Foo](../vault2/foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_XVAULT_LINK_TO_SAME_VAULT" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS" 1`] = `
VFile {
  "contents": "# Root

[bar](foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_ENHANCED_PREVIEW: regular" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo.md)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_ALIAS" 1`] = `
VFile {
  "contents": "# Root

[bar](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_ANCHOR" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_EXTENSION" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_SPACE_AND_ALIAS" 1`] = `
VFile {
  "contents": "# Root

[bar](foo%20bar)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_XVAULT_LINK_TO_OTHER_VAULT" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_XVAULT_LINK_TO_SAME_VAULT" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: WITH_XVAULT_LINK_TO_SAME_VAULT_AND_ALIAS" 1`] = `
VFile {
  "contents": "# Root

[bar](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`wikiLinks compile "MD_REGULAR: regular" 1`] = `
VFile {
  "contents": "# Root

[Foo](foo)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
